fix: address bar not hiding on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,9 @@
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
