--- a/src/app/shared/components/base-page/base-page.component.scss
+++ b/src/app/shared/components/base-page/base-page.component.scss
@@ -1,6 +1,6 @@
 :host {
 
-  flex: 1 0 auto;
+  flex: 1;
   display: flex;
   flex-direction: column;
 
@@ -31,7 +31,6 @@
 
   &.small {
     mat-sidenav-container {
-      flex: 1 0 auto;
 
       mat-sidenav-content {
 
