--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
 html, body {
   width: 100vw;
-  height: 100vh;
 }
 
 html, body, * {
